Timelog setup -> create and get all logs route added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=time-tracker
+spring.application.name=timetracker
+spring.datasource.url=jdbc:postgresql://localhost:5432/timetracker
+spring.datasource.username=timetracker
+spring.datasource.password=timetracker
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+jwt.secret=mysupersecretkeyforjwt1234567890
